# phylo-parser

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml  docker-release.yml  release.yml
LICENSES/: MIT.txt
configs/: config.ci.yaml  config.yaml
data/examples/: minimal.txt
dicts/: aism_dict.json  bspo_dict.json  bspo_syn_dict.json  ent_dict.json  hao_dict.json  hao_syn_dict.json  pato_dict.json  pato_syn_dict.json  syn_dict.json
phylo_parser/: __init__.py  __main__.py  main.py
phylo_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
