[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phylo-parser"
version = "0.1.0"
description = "Ontology-aware parser for phenotypic character matrices"
readme = "README.md"
license = { file = "LICENSES/MIT.txt" }
authors = [
  { name = "Thiago S. R. Silva" },
  { name = "Diego S. Porto" }
]
requires-python = ">=3.10"

dependencies = [
  "pandas>=2.3.1",
  "rdflib>=7.1.4",
  "pyyaml>=6.0.3"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["phylo_parser*"]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I"]

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
tag_format = "v{version}"
commit_parser = "conventional"
commit_message = "chore(release): {version}"
logging_use_named_masks = true
version_toml = ["pyproject.toml:project.version"]
version_variables = ["phylo_parser/__init__.py:__version__"]

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = [
  '''chore(?:\([^)]*\))?: .+''',
  '''ci(?:\([^)]*\))?: .+''',
  '''style(?:\([^)]*\))?: .+''',
  '''refactor(?:\([^)]*\))?: .+''',
  '''test(?:\([^)]*\))?: .+''',
  '''build(?:\([^)]*\))?: .+''',
  '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.remote]
name = "origin"
type = "github"
token = { env = "GH_TOKEN" }
